vbnc/vbnc/tests/Errors/33106.vb
Option Strict On
Class A
    Shared Sub Main()
        Dim o As Integer = If(False, 1L, 1UL)
    End Sub
End Class